plugins {
  id 'java'
}

ext {
  // Dependency versions
  clthVersion = "2.0"
}

java {
  sourceCompatibility = 21
  targetCompatibility = 21
}

if (JavaVersion.current().isJava8Compatible()) {
  allprojects {
    tasks.withType(Javadoc).tap {
      configureEach {
        options.addStringOption('Xdoclint:none', '-quiet')
      }
    }
  }
}
